--- a/tickets.html
+++ b/tickets.html
@@ -41,8 +41,8 @@
                     </select>
                 </p>
                 <p>
-                    <input type="checkbox" name="lodging" value="lodging">Add on lodging - $99<br>
-                    <input type="checkbox" name="meals" value="meals">Add on meals -  $119<br>
+                    <input type="checkbox" name="lodging" value="lodging">Add On Lodging - $99<br>
+                    <input type="checkbox" name="meals" value="meals"> Add On Meals -  $119<br>
                 </p>
                 <p><input type="submit" value="Submit"></p>
             </form>
