--- a/tickets.html
+++ b/tickets.html
@@ -21,7 +21,8 @@
             <img src="images/hero-symbol.jpg" alt="hero symbol">
             <h1>ADVANCING TECHNOLOGY</h1>
             <h2>1st Annual Budding Developers Conference</h2>
-            <p>Orlando, FL - October 11, 2019</p>
+            <p>Orange County Convention Center</p>
+            <p>Orlando, FL - October 11, 2021</p>
         </div>
     </header>
     <section id="ticket-form">
