--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </div>
           <div class="speaker-text">
             <div>Johnny Thompson -- 10AM</div>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+            <p>Sed ut ut ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
               totam
               rem
               aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
